syntax = "proto3";

package pm0;

option go_package = "./pb";

import "google/protobuf/empty.proto";


message StartRequest {
    string cwd = 1;
    string bin = 2;
    repeated string args = 3;
    // TODO: user?
}

message StartResponse {
    string id = 1;
    int32 pid = 2;
}

// TODO: add names for units
message Unit {
    string id = 1;
    optional int32 pid = 2;
    uint32 status = 3;
    optional int32 exit_code = 4;
    // TODO: add reload count
    // TODO: add uptime 
    // TODO: add cpu/memory
}

message ListResponse {
    repeated Unit units = 1;
}

service ProcessService {
    rpc Start(StartRequest) returns (StartResponse);
    rpc List(google.protobuf.Empty) returns (ListResponse);
}
